--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prog. Básica</title>
-    <style>
-        h1,h2,h3,h4{ color: red; }
-        h5,h6{ color: orange; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <button onclick="CambiarColor()">PROBANDO CÓDIGO JS</button>
@@ -18,12 +15,6 @@
     <h5>Wilder Duarte</h5>
     <h6>Wilder Duarate</h6>
 
-    <script>
-        function CambiarColor(){
-            // alert("HOLA BIENVENIDO");
-            document.body.style.backgroundColor = "black";
-            document.getElementById("title").style.color = "orange";
-        }
-    </script>
+    <script src="function.js"></script>
 </body>
 </html>
