estructurando archivos en carpetas

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prog. Básica</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <img src="img/futbol.jpg" alt="Imagen de fútbol">
     <button onclick="CambiarColor()">PROBANDO CÓDIGO JS</button>
     <h1 id="title">WILDER ANDRÉS DUARTE NEIRA</h1>
     <h2>Wilder Duarte</h2>
@@ -15,6 +16,6 @@
     <h5>Wilder Duarte</h5>
     <h6>Wilder Duarate</h6>
 
-    <script src="function.js"></script>
+    <script src="js/function.js"></script>
 </body>
 </html>
