Actualizar el readme.md

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
             <li class="menu_item">
                 <a href="">Etiquetas</a>
                 <ul class="submenu">
-                    <li><a href="">Etiquetas 1</a></li>
+                    <li><a href="html/multimedia.html">Multimedia</a></li>
+                    <li><a href="html/multimedia.html">Multimedia</a></li>
+                    <li><a href="html/multimedia.html">Multimedia</a></li>
+                    <li><a href="html/multimedia.html">Multimedia</a></li>
+                    <li><a href="html/multimedia.html">Multimedia</a></li>
                     <li><a href="">Etiquetas 1</a></li>
                     <li><a href="">Etiquetas 1</a></li>
                 </ul>
@@ -50,31 +54,31 @@
                 <tbody>
                     <tr>
                         <td><code>&lt;header&gt;</code></td>
-                        <td>123</td>
+                        <td class="alinear_texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore cumque voluptas deserunt voluptates nostrum dolorem voluptatem adipisci tempora. Dolore a id enim molestiae perferendis debitis voluptate sit quia ex quibusdam!</td>
                     </tr>
                     <tr>
                         <td><code>&lt;nav&gt;</code></td>
-                        <td>123</td>
+                        <td class="alinear_texto">123</td>
                     </tr>
                     <tr>
                         <td><code>&lt;main&gt;</code></td>
-                        <td>123</td>
+                        <td class="alinear_texto">123</td>
                     </tr>
                     <tr>
                         <td><code>&lt;footer&gt;</code></td>
-                        <td>123</td>
+                        <td class="alinear_texto">123</td>
                     </tr>
                     <tr>
                         <td><code>&lt;section&gt;</code></td>
-                        <td>123</td>
+                        <td class="alinear_texto">123</td>
                     </tr>
                     <tr>
                         <td><code>&lt;aside&gt;</code></td>
-                        <td>123</td>
+                        <td class="alinear_texto">123</td>
                     </tr>
                     <tr>
                         <td><code>&lt;article&gt;</code></td>
-                        <td>123</td>
+                        <td class="alinear_texto">123</td>
                     </tr>
                 </tbody>
             </table>
