--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
             <li class="menu_item">
                 <a href="">Etiquetas</a>
                 <ul class="submenu">
+                    <li><a href="html/miprimerpagina.html">Primer Pág.</a></li>
                     <li><a href="html/multimedia.html">Multimedia</a></li>
-                    <li><a href="html/multimedia.html">Multimedia</a></li>
-                    <li><a href="html/multimedia.html">Multimedia</a></li>
-                    <li><a href="html/multimedia.html">Multimedia</a></li>
-                    <li><a href="html/multimedia.html">Multimedia</a></li>
-                    <li><a href="">Etiquetas 1</a></li>
-                    <li><a href="">Etiquetas 1</a></li>
+                    <li><a href="html/formcontact.html">Formulario</a></li>
+                    <li><a href="html/pasoslistas.html">Listas</a></li>
+                    <li><a href="html/tarpersonal.html">Tarjeta</a></li>
                 </ul>
             </li>
         </ul>
