--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
      <nav class="menu_nav">
         <ul>
             <li><a href="">Encabezado</a></li>
-            <li><a href="">Contenido Principal</a></li>
+            <li><a href="html/selectores.html">Selectores CSS</a></li>
+            <li><a href="html/propiedades.html">Propiedades CSS</a></li>
             <li><a href="">Pié de Página</a></li>
             <!-- Menú depslegable -->
             <li class="menu_item">
