--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li><a href="html/formcontact.html">Formulario</a></li>
                     <li><a href="html/pasoslistas.html">Listas</a></li>
                     <li><a href="html/tarpersonal.html">Tarjeta</a></li>
+                    <li><a href="html/ejercss.html">Ejercicio CSS</a></li>
                 </ul>
             </li>
         </ul>
