--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                     <li><a href="html/pasoslistas.html">Listas</a></li>
                     <li><a href="html/tarpersonal.html">Tarjeta</a></li>
                     <li><a href="html/ejercss.html">Ejercicio CSS</a></li>
+                    <li><a href="html/practicajs.html">Práctica JS</a></li>
+                    <li><a href="html/calculaedad.html">Calcular Edad</a></li>
                 </ul>
             </li>
         </ul>
