--- a/html/calculaedad.html
+++ b/html/calculaedad.html
@@ -13,6 +13,7 @@
         <input type="date" id="fecha_nac">
         <button onclick="CalcularEdad()">Calcular Edad</button>
         <p id="resultado"></p>
+        <a href="../index.html">Volver atrás</a>
     </div>
     <script src="../js/function_edad.js"></script>
 </body>
