--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li><a href="html/ejercss.html">Ejercicio CSS</a></li>
                     <li><a href="html/practicajs.html">Práctica JS</a></li>
                     <li><a href="html/calculaedad.html">Calcular Edad</a></li>
+                    <li><a href="html/verpassword.html">Ver Password</a></li>
                 </ul>
             </li>
         </ul>
