--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li><a href="html/practicajs.html">Práctica JS</a></li>
                     <li><a href="html/calculaedad.html">Calcular Edad</a></li>
                     <li><a href="html/verpassword.html">Ver Password</a></li>
+                    <li><a href="html/verpassword_dos.html">Ver Password V2.0</a></li>
                 </ul>
             </li>
         </ul>
