--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li><a href="html/calculaedad.html">Calcular Edad</a></li>
                     <li><a href="html/verpassword.html">Ver Password</a></li>
                     <li><a href="html/verpassword_dos.html">Ver Password V2.0</a></li>
+                    <li><a href="html/todolist.html">Todo List</a></li>
                 </ul>
             </li>
         </ul>
