funcionalidad de ofmrulario ok

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <li><a href="html/verpassword.html">Ver Password</a></li>
                     <li><a href="html/verpassword_dos.html">Ver Password V2.0</a></li>
                     <li><a href="html/todolist.html">Todo List</a></li>
+                    <li><a href="html/form.html">Formulario</a></li>
                 </ul>
             </li>
         </ul>
