--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                     <li><a href="html/verpassword.html">Ver Password</a></li>
                     <li><a href="html/verpassword_dos.html">Ver Password V2.0</a></li>
                     <li><a href="html/todolist.html">Todo List</a></li>
-                    <li><a href="html/form.html">Formulario</a></li>
+                    <li><a href="html/form.html">Formulario con Js</a></li>
+                    <li><a href="#">Métodos Js</a></li>
                 </ul>
             </li>
         </ul>
